# Capstone-Project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
config/: db_config.py  env_config.py
data/processed/: cleaned_tracks_features.csv
data/raw/: uncleaned_tracks_features.csv
insights/: streamlit_vizualizations.py
notebooks/: transfomations.ipynb
scripts/: run_etl.py
src/extract/: extract.py  extract_tracks.py  unclean_data.py
src/load/: load.py
src/sql/: create_table.sql
src/transform/: transform.py  transform_tracks.py
tests/test_data/: expected_transaction_clean_results.csv
